// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide tag when the show prop is false 1`] = `
<transition-stub appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
`;

exports[`should render border-color correctly 1`] = `
<transition-stub appear="false"
                 persisted="false"
                 css="true"
>
  <span style="color: blue; border-color: red;"
        class="r-tag r-tag--plain r-tag--default"
  >
  </span>
</transition-stub>
`;
